--- a/GhasreMobile/wwwroot/css/pages/account.scss
+++ b/GhasreMobile/wwwroot/css/pages/account.scss
@@ -5,11 +5,21 @@ body {
     background-color: #fff;
 }
 
+.grecaptcha-badge {
+    display: none!important;
+}
+
 .home {
     display: flex;
-    padding: 20px;
-    position: fixed;
+    padding: 6px;
+    top: 18px;
+    left: 18px;
+    position: absolute;
     z-index: 24;
+    background-color: #fff;
+    @include border-def-radius;
+    border: 1px solid #e5e5e5;
+    color: #999;
 }
 
 .l {
@@ -62,7 +72,7 @@ body {
     .l {
         display: grid;
         grid-template-columns: 1fr;
-        height: 100vh;
+        height: auto;
 
         &-content {
             position: relative;
@@ -71,7 +81,6 @@ body {
 
             .l-mid {
                 @include row;
-                height: 100vh;
 
                 .form-block {
                     margin: auto;
@@ -79,6 +88,7 @@ body {
                     min-width: unset;
                     width: 100%;
                     padding: 0 20px;
+                    padding-bottom: 20px;
                 }
             }
         }
