--- a/GhasreMobile/Views/Shared/Components/BrandListView/BrandListView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BrandListView/BrandListView.cshtml
@@ -3,5 +3,6 @@
 {
     <li>
         <a href="/Search?brandId=@item.BrandId" class="link-text">@item.Name</a>
+        @*<a href="/ShowBrand/@item.BrandId/@item.Name" class="link-text">@item.Name</a>*@
     </li>
 }
