--- a/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
@@ -15,7 +15,7 @@
                         <div class="form-inline">
                             <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0">
                                 <input id="SearchInputName" class="form-control uk-text-small" type="text" placeholder="نام کاربر" value="">
-                                <input id="SearchInputTelNo" class="form-control uk-text-small mr-md-2 mt-2 mt-md-0" type="text" placeholder="شماره تماس" value="">
+                                <input id="SearchInputTelNo" class="form-control uk-text-small mr-md-2 mt-2 mt-md-0" type="number" placeholder="شماره تماس" value="">
                                 <button onclick="BtnSearch()" type="button" class="btn btn-primary btn-sm mr-md-3 mt-2 mt-md-0">جستجو<span class="icon-holder uk-margin-small-right" uk-icon="search-outline"></span></button>
                             </div>
                         </div>
