--- a/GhasreMobile/Areas/Admin/Views/Delivery/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Delivery/Index.cshtml
@@ -12,7 +12,7 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="متن جستجو" value="">
+                                    <input id="SearchInput" class="form-control uk-text-small" type="number" placeholder="شماره تماس" value="">
                                 </div>
 
                             </div>
