--- a/GhasreMobile/Areas/Admin/Views/Notification/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Notification/Index.cshtml
@@ -13,7 +13,7 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1  mr-1">
-                                    <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="شماره تماس" value="">
+                                    <input id="SearchInput" class="form-control uk-text-small" type="number" placeholder="شماره تماس" value="">
                                 </div>
                             </div>
                         </div>
