--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
@@ -15,7 +15,7 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input id="SearchInputUserPhone" class="form-control uk-text-small" type="text" placeholder="شماره تماس مشتری" value="">
+                                    <input id="SearchInputUserPhone" class="form-control uk-text-small" type="number" placeholder="شماره تماس مشتری" value="">
                                 </div>
 
                             </div>
