--- a/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
@@ -31,7 +31,7 @@
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
                                             <a onclick="Edit(@item.BrandId)" id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
-                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
                                             <a onclick="Delete(@item.BrandId)" id="Edit" class="text-danger" uk-icon="trash-outline"></a>
                                         </span>
                                     </td>
@@ -68,13 +68,15 @@
         }
 
         function Delete(Id) {
-            $.post("/Admin/Brand/Delete/" + Id, function (result) {
-                if (result == "true") {
-                    window.location.reload();
-                } else {
-                    UIkit.notification({ message: result });
-                }
-            });
+            if (confirm("حذف شود")) {
+                $.post("/Admin/Brand/Delete/" + Id, function (result) {
+                    if (result == "true") {
+                        window.location.reload();
+                    } else {
+                        UIkit.notification({ message: result });
+                    }
+                });
+            }
         }
 
     </script>
