--- a/GhasreMobile/Areas/Admin/Views/Catagory/Components/ShowChildsCatagory.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Components/ShowChildsCatagory.cshtml
@@ -34,10 +34,8 @@
 
                                     <div class="col-xl-2 col-lg-2  col-sm-3 col-5">
                                         <div class="option d-flex">
-
-                                            @*<a onclick="ShowChildsCatagory(@item.CatagoryId)" data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="albums-outline"></i></a>*@
-
                                             <a onclick="EditCatagory(@item.CatagoryId)" data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="create-outline"></i></a>
+                                            <a onclick="Delete(@item.CatagoryId)" data-placement="top" data-toggle="tooltip"><i class="btn ml-2 text-primary" uk-icon="create-outline"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -57,3 +55,14 @@
         </div>
     </div>
 </form>
+
+<script>
+    function Delete(id) {
+        $.get("/Admin/Category/Delete/" + id, function (result) {
+            if (result == "true") {
+                window.location.reload();
+            } else if (result == "false") {
+                UIkit.notification('این دسته بندی نمیتواند حذف شود');
+            }
+        });
+</script>
