--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Components/Info.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Components/Info.cshtml
@@ -22,7 +22,7 @@
                 <span>@Model.Client.Name</span>
             </div>
             <div class="form-group col-md-6">
-                <label>نام کاربری:</label>
+                <label>شماره تماس:</label>
                 <span>@Model.Client.TellNo</span>
             </div>
             <div class="form-group col-md-6">
