--- a/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
@@ -20,7 +20,7 @@
                                     <input id="SearchInputId" class="form-control uk-text-small" type="text" placeholder="کد سفارش" value="">
                                 </div>
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input id="SearchInputUserPhone" class="form-control uk-text-small" type="text" placeholder="شماره تماس مشتری" value="">
+                                    <input id="SearchInputUserPhone" class="form-control uk-text-small" type="number" placeholder="شماره تماس مشتری" value="">
                                 </div>
                                 <div class="form-group mx-sm-1 mb-2">
                                     <input readonly id="startDate" class="form-control uk-text-small" type="text" placeholder="از تاریخ  " value="">
