--- a/GhasreMobile/Areas/Admin/Views/Product/Components/Stock.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/Stock.cshtml
@@ -32,7 +32,7 @@
                         <input id="ColorId-@item.ColorId" class="form-control form-control-sm col-md-4" placeholder="مثال:3" value="@item.Count">
                     </td>
                     <td>
-                        <button onclick="EditStoke(@item.ColorId, $('#ColorId-@item.ColorId').val())" class="btn btn-sm btn-success">ثبت</button>
+                        <button onclick="EditStoke(@item.ColorId)" class="btn btn-sm btn-success">ثبت</button>
                     </td>
                 </tr>
 
@@ -51,17 +51,17 @@
         <input id="Price-@Model.First().ProductId" class="form-control form-control-sm col-md-2 PriceInput" placeholder="مثال:50000" value="@Model.First().Product.PriceBeforeDiscount">
     }
 
-    <button onclick="EditPrice(@Model.First().ProductId, $('#Price-@Model.First().ProductId').val())" class="btn btn-sm btn-success ml-md-4">ثبت</button>
+    <button onclick="EditPrice(@Model.First().ProductId)" class="btn btn-sm btn-success ml-md-4">ثبت</button>
 </div>
 <script src="~/js/Input_Formatting_Currency.js"></script>
 <script>
-    function EditStoke(id, count) {
-        $.post("/Admin/Product/EditStoke?Id=" + id + "&count=" + count, function () {
+    function EditStoke(id) {
+        $.post("/Admin/Product/EditStoke?Id=" + id + "&count=" + document.querySelectorAll('#ColorId-' + id)[1].value, function () {
             UIkit.notification("موجودی بروز شد");
         });
     }
-    function EditPrice(Id, Price) {
-        $.post("/Admin/Product/EditPrice?Id=" + Id + "&Price=" + Price.replaceAll(",",""), function () {
+    function EditPrice(Id) {
+        $.post("/Admin/Product/EditPrice?Id=" + Id + "&Price=" + document.querySelectorAll("#Price-@Model.First().ProductId")[1].value, function () {
             UIkit.notification("قیمت محصول بروز شد");
         });
     }
