--- a/GhasreMobile/Areas/Admin/Views/Slider/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Index.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
+@using GhasreMobile.Utilities
+
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
@@ -29,7 +31,7 @@
                             {
                                 <tr>
                                     <td>@item.Name</td>
-                                    <td>@item.ActiveTill</td>
+                                    <td>@item.ActiveTill.AllToShamsi()</td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
                                             <a onclick="RemoveSlider(@item.BannerAndSlideId)" class="text-danger" uk-icon="trash"></a>
