--- a/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<DataLayer.Models.TblTicket>
+
 @{
     ViewData["Title"] = "مرکز پاسخگویی";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -18,7 +19,7 @@
                                     <input id="SearchInputId" class="form-control uk-text-small" type="text" placeholder="کد تیکت" value="">
                                 </div>
                                 <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0">
-                                    <input id="SearchInputTelNo" class="form-control uk-text-small" type="text" placeholder="شماره تماس" value="">
+                                    <input id="SearchInputTelNo" class="form-control uk-text-small" type="number" placeholder="شماره تماس" value="">
                                 </div>
                             </div>
                         </div>
@@ -49,7 +50,7 @@
                                     <td colspan="6">تیکتی وجود ندارد</td>
                                 </tr>
                             }
-                            @foreach (var items in Model.OrderByDescending(c => c.IsAnswer != true).GroupBy(c => c.ClientId))
+                            @foreach (var items in Model.OrderByDescending(c => c.IsAnswerd != true).GroupBy(c => c.ClientId))
                             {
                                 var item = items.First();
 
