--- a/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
@@ -49,7 +49,7 @@
                                                 <a onclick="EditCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
                                             </span>
                                             <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                                <a onclick="Delete(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                                <a onclick="Delete(@item.CatagoryId)" class="text-danger" uk-icon="trash-outline"></a>
                                             </span>
                                         </td>
                                     </tr>
@@ -100,7 +100,7 @@
         }
 
         function Delete(id) {
-            $.get("/Admin/Category/Delete/" + id, function (result) {
+            $.get("/Admin/Catagory/Delete/" + id, function (result) {
                 if (result == "true") {
                     window.location.reload();
                 } else if (result=="false") {
