--- a/GhasreMobile/Views/Gallery/AlbumView.cshtml
+++ b/GhasreMobile/Views/Gallery/AlbumView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TblAlbum
 @{
-    ViewData["Title"] = "آلبوم" + Model.Name;
+    ViewData["Title"] = " آلبوم "+" " + Model.Name;
     ViewData["Single"] = true;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
