--- a/GhasreMobile/Views/Gallery/Index.cshtml
+++ b/GhasreMobile/Views/Gallery/Index.cshtml
@@ -10,7 +10,7 @@
 
 }
 
-<div class="gallery-main height">
+<div class="gallery-main">
     @foreach (var item in Model)
     {
         <partial name="_AlbumBlock" , model="item" />
