--- a/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Any())
 {
-    <div class="main-slideshow uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="ratio:16:7">
+    <div class="main-slideshow uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="ratio:16:7;autoplay:true">
 
         <ul class="uk-slideshow-items">
             @foreach (var item in Model)
