--- a/GhasreMobile/Views/Blog/ViewBlog.cshtml
+++ b/GhasreMobile/Views/Blog/ViewBlog.cshtml
@@ -2,6 +2,20 @@
 @{
     ViewData["Title"] = Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<int> idsAdd = (List<int>)ViewData["ListIdAd"];
+    Random random = new Random();
+
+    int getNext()
+    {
+        if (idsAdd.Count > 0)
+        {
+            int randomIndex = random.Next(0, idsAdd.Count - 1);
+            int id = idsAdd[randomIndex];
+            idsAdd.Remove(id);
+            return id;
+        }
+        return -1;
+    }
 }
 
 @section Styles{
@@ -12,8 +26,8 @@
 
 @section Aside{
 
-    @await Component.InvokeAsync("AdView")
-    @await Component.InvokeAsync("AdView")
+    @await Component.InvokeAsync("AdView", new { number = getNext() })
+    @await Component.InvokeAsync("AdView", new { number = getNext() })
 
 }
 
