--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -3,6 +3,20 @@
     ViewData["Title"] = " تالار گفتگو- " + Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["TopicId"] = Model.TopicId;
+    List<int> idsAdd = (List<int>)ViewData["ListIdAd"];
+    Random random = new Random();
+
+    int getNext()
+    {
+        if (idsAdd.Count > 0)
+        {
+            int randomIndex = random.Next(0, idsAdd.Count - 1);
+            int id = idsAdd[randomIndex];
+            idsAdd.Remove(id);
+            return id;
+        }
+        return -1;
+    }
 }
 
 @section Styles{
@@ -14,8 +28,8 @@
 @section Aside{
 
 
-    @await Component.InvokeAsync("AdView")
-    @await Component.InvokeAsync("AdView")
+    @await Component.InvokeAsync("AdView", new { number = getNext() })
+    @await Component.InvokeAsync("AdView", new { number = getNext() })
 }
 
 <nav class="breadcrumb uk-padding-remove">
