--- a/GhasreMobile/Views/Search/Index.cshtml
+++ b/GhasreMobile/Views/Search/Index.cshtml
@@ -2,6 +2,20 @@
 @{
     ViewData["Title"] = ViewData["Title"];
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<int> idsAdd = (List<int>)ViewData["ListIdAd"];
+    Random random = new Random();
+
+    int getNext()
+    {
+        if (idsAdd.Count > 0)
+        {
+            int randomIndex = random.Next(0, idsAdd.Count - 1);
+            int id = idsAdd[randomIndex];
+            idsAdd.Remove(id);
+            return id;
+        }
+        return -1;
+    }
 }
 
 @section Styles{
@@ -93,7 +107,7 @@
         <button class="btn btn-primary uk-margin-top">اعمال فیلتر ها</button>
     </form>
 
-    <div swap="Ad"> @await Component.InvokeAsync("AdView")</div>
+    <div swap="Ad"> @await Component.InvokeAsync("AdView", new { number = getNext() })</div>
 
 }
 
