--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -235,9 +235,10 @@ backdrop-filter: saturate(80%);
   display: grid;
   grid-template-rows: auto;
   grid-gap: 12px;
-  grid-template-columns: repeat(auto-fit, minmax(256px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
+  margin-bottom: auto !important; }
   .gallery-main .albumBlock {
-    max-height: 324px;
+    max-height: 220px;
     max-width: 300px; }
     .gallery-main .albumBlock a {
       background-color: #fff;
@@ -250,6 +251,7 @@ backdrop-filter: saturate(80%);
         margin: auto;
         width: 100%;
         height: 100%;
+        max-height: 173px;
         min-height: 168px;
         -o-object-fit: cover;
         object-fit: cover;
