--- a/GhasreMobile/wwwroot/css/pages/index.scss
+++ b/GhasreMobile/wwwroot/css/pages/index.scss
@@ -192,9 +192,10 @@ $album-width: 290px;
 // Gallery Page
 .gallery-main {
     @include grid-gap(256px,12px);
+    margin-bottom: auto !important;
 
     .albumBlock {
-        max-height: 324px;
+        max-height: 220px;
         max-width: 300px;
 
         a {
@@ -208,6 +209,7 @@ $album-width: 290px;
                 margin: auto;
                 width: 100%;
                 height: 100%;
+                max-height: 173px;
                 min-height: 168px;
                 @include obj;
             }
