--- a/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Catagory/Index.cshtml
@@ -48,7 +48,7 @@
                                             <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
                                                 <a onclick="EditCatagory(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
                                             </span>
-                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
                                                 <a onclick="Delete(@item.CatagoryId)" class="text-danger" uk-icon="trash-outline"></a>
                                             </span>
                                         </td>
