admin: gallery in create and edit product

--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -150,7 +150,7 @@
                 &nbsp;<span onclick="SetNewInputGallery()" class="text-success" uk-icon="add-circle-outline"></span>
                 &nbsp;<span onclick="RemoveInputGallery()" class="text-danger" uk-icon="remove-circle-outline"></span>
 
-                <div id="GalleryPanel" class="h-50"></div>
+                <div id="GalleryPanel"></div>
                 <br />
                 <span class="text-success">لطفا اندازه تصویر انتخابی 420*368 باشد</span>
                 <br />
