--- a/GhasreMobile/Areas/Admin/Views/Discount/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Components/Create.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>چند روز</label>
-                <input name="Till" required type="number" class="form-control form-control-sm" placeholder="مثال: 2">
+                <input name="Till" required type="number" min="1" class="form-control form-control-sm" placeholder="مثال: 2">
                 <span class="text-danger" asp-validation-for="ValidTill"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
