--- a/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label>چند روز</label>
-                <input name="Till" required type="number" class="form-control form-control-sm" placeholder="مثال: 2">
+                <input name="Till" required type="number" min="1" class="form-control form-control-sm" placeholder="مثال: 2">
                 <span class="text-danger"></span>
             </div>
         </div>
